[gd_scene load_steps=4 format=3 uid="uid://chtm4kq5ubky2"]

[ext_resource type="Script" uid="uid://di430d7t4od3c" path="res://scripts/main_menu.gd" id="1_dd3i0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqorp"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukcvp"]
bg_color = Color(0.385493, 0.385492, 0.385492, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dd3i0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.0
offset_top = 20.0
offset_right = 291.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "The Birds Hired a Sniper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -141.5
offset_right = 196.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("Start")
theme_override_constants/separation = 10
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
text = "Start Game"

[node name="Levels" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
text = "Levels"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/hover = SubResource("StyleBoxFlat_yqorp")
theme_override_styles/normal = SubResource("StyleBoxFlat_ukcvp")
text = "Quit"

[connection signal="button_down" from="VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="VBoxContainer/Levels" to="." method="_on_levels_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
